Cleanup wording + add cross references

--- a/basic_resources/intro_sklearn.ipynb
+++ b/basic_resources/intro_sklearn.ipynb
@@ -6,11 +6,23 @@
    "source": [
     "# Scikit-Learn\n",
     "\n",
+    "### Quick Note\n",
+    "\n",
+    "This tutorial is part of the [Python Basic Resources](https://github.com/GalvanizeOpenSource/python-resources/tree/master/basic_resources) 4-part series produced by [Galvanize](http://www.galvanize.com/).\n",
+    "\n",
+    "This tutorial moves very fast. If you would like a slower, more in-depth intro to Python, we suggest you take our [Intro to Python Evening Course](http://www.galvanize.com/courses/intro-to-python/). It's the perfect way to become familiar with Python + gain experience using Python to solve challenging problems.\n",
+    "\n",
+    "### Prerequisites\n",
+    "\n",
+    "This document is a *Jupyter notebook*. If you are viewing it using GitHub, then you cannot execute the cells that contain Python code. To view **and run** this notebook you'll need to install Jupyter on your computer before you continue. See [these installation instructions](https://github.com/GalvanizeOpenSource/python-resources/tree/master/installation) for help!\n",
+    "\n",
+    "### Overview\n",
+    "\n",
     "Here we're going to walk through running a model, and looking at the results. Before we get started let's go over some terminology...\n",
     "\n",
     "### Terminology\n",
     "\n",
-    "1.) `features` - Another word for the X variables, independent variables, regressors...   \n",
+    "1.) `features` - Another word for the X variables, independent variables, predictors, regressors...   \n",
     "2.) `target` - Another word for the Y variable, dependent variable, outcome variable, response...  \n",
     "3.) `model` - What we use to relate one set of variables to another.      \n",
     "4.) `feature engineering` - Refers to the process of manipulating your features, creating new ones, etc. before feeding the data into your model.   \n",
@@ -719,6 +731,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Want some practice?\n",
+    "\n",
+    "Have a look at the `intro_sklearn_practice.ipynb` notebook!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Next Steps\n",
+    "\n",
+    "Congrats on finishing this [Python Basic Resources](https://github.com/GalvanizeOpenSource/python-resources/tree/master/basic_resources) series!\n",
+    "\n",
+    "Next, you can see Python in-action exploring a real dataset, have a look at [Exploring Data with Python using Jupyter Notebooks](https://github.com/GalvanizeOpenSource/python-resources/tree/master/exploring_data)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -744,7 +780,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
