--- a/basic_resources/intro_to_classes.ipynb
+++ b/basic_resources/intro_to_classes.ipynb
@@ -6,6 +6,18 @@
    "source": [
     "# OOP and Classes\n",
     "\n",
+    "### Quick Note\n",
+    "\n",
+    "This tutorial is part of the [Python Basic Resources](https://github.com/GalvanizeOpenSource/python-resources/tree/master/basic_resources) 4-part series produced by [Galvanize](http://www.galvanize.com/).\n",
+    "\n",
+    "This tutorial moves very fast. If you would like a slower, more in-depth intro to Python, we suggest you take our [Intro to Python Evening Course](http://www.galvanize.com/courses/intro-to-python/). It's the perfect way to become familiar with Python + gain experience using Python to solve challenging problems.\n",
+    "\n",
+    "### Prerequisites\n",
+    "\n",
+    "This document is a *Jupyter notebook*. If you are viewing it using GitHub, then you cannot execute the cells that contain Python code. To view **and run** this notebook you'll need to install Jupyter on your computer before you continue. See [these installation instructions](https://github.com/GalvanizeOpenSource/python-resources/tree/master/installation) for help!\n",
+    "\n",
+    "### Overview\n",
+    "\n",
     "From [wikipedia](https://en.wikipedia.org/wiki/Object-oriented_programming): \"Object-oriented programming (OOP) is a programming paradigm based on the concept of \"objects\", which are data structures that contain data, in the form of fields, often known as attributes; and code, in the form of procedures, often known as methods.\"\n",
     "\n",
     "Object-oriented programming has many benefits (see *encapsulation*, *polymorphism*, and *inheritance* in the wiki), but it also kind of matches how we think about the world. The world is composed of *objects*, where objects can be people, houses, cars, buildings, etc. These *objects* have some properties about them (i.e. they contain data), and they can do things (i.e. they have methods that can be applied). Object oriented programming approaches a programming problem by using objects that interact with each other, much like they do in the real world. \n",
@@ -332,6 +344,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Want some practice?\n",
+    "\n",
+    "Have a look at the `intro_classes_practice.ipynb` notebook!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Next Steps\n",
+    "\n",
+    "Next, you can finish this [Python Basic Resources](https://github.com/GalvanizeOpenSource/python-resources/tree/master/basic_resources) series. (You just completed part 2 of 4, so keep it up!)\n",
+    "\n",
+    "If you want to see Python in-action exploring a real dataset, have a look at [Exploring Data with Python using Jupyter Notebooks](https://github.com/GalvanizeOpenSource/python-resources/tree/master/exploring_data)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -357,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
