--- a/basic_resources/intro_to_functions.ipynb
+++ b/basic_resources/intro_to_functions.ipynb
@@ -6,15 +6,27 @@
    "source": [
     "# Functions\n",
     "\n",
-    "Functions are an essential part of coding, and are a way of defining a procedure that you can reuse. They are incredibly helpful in writing clean, readable, and reusable code. I would encourage you to code using functions (or classes) whenever you can. \n",
+    "### Quick Note\n",
+    "\n",
+    "This tutorial is part of the [Python Basic Resources](https://github.com/GalvanizeOpenSource/python-resources/tree/master/basic_resources) 4-part series produced by [Galvanize](http://www.galvanize.com/).\n",
+    "\n",
+    "This tutorial moves very fast. If you would like a slower, more in-depth intro to Python, we suggest you take our [Intro to Python Evening Course](http://www.galvanize.com/courses/intro-to-python/). It's the perfect way to become familiar with Python + gain experience using Python to solve challenging problems.\n",
+    "\n",
+    "### Prerequisites\n",
+    "\n",
+    "This document is a *Jupyter notebook*. If you are viewing it using GitHub, then you cannot execute the cells that contain Python code. To view **and run** this notebook you'll need to install Jupyter on your computer before you continue. See [these installation instructions](https://github.com/GalvanizeOpenSource/python-resources/tree/master/installation) for help!\n",
+    "\n",
+    "### Overview\n",
+    "\n",
+    "Functions are an essential part of coding and are a way of defining a procedure that you can reuse. They are incredibly helpful in writing clean, readable, and reusable code. I would encourage you to code using functions (or classes) whenever you can. \n",
     "\n",
     "Python has a very large number of built-in functions, as well as a vast repository of modules/libraries through which other functions (as well as classes) are available. Check out the [built-in function docs](https://docs.python.org/2/library/functions.html) to see all of the built-in functions that are available to use. One of the libraries whose functions I use regularly is the [itertools](https://docs.python.org/2/library/itertools.html) library. \n",
     "\n",
-    "From a top-down level, functions name a piece of code that takes an argument/arguments and allows you to write \"tiny commands\". The purpose/use of a functions should typically be able to be described in one sentence, and on average functions should probably be no longer than 10 lines. \n",
+    "From a top-down level, functions name a piece of code that takes parameter(s) and allows you to write \"tiny commands\". The purpose/use of a functions should typically be able to be described in one sentence, and on average functions should probably be no longer than 10 lines.\n",
     "\n",
     "### How do I create them?\n",
     "\n",
-    "Functions are defined using a `def` statement, followed by the name that you wish to give the function (this name must follow variable naming conventions - `camel_case` in Python), followed by a set of parentheses that contain any potential arguments that may be passed to the function. After that set of parentheses, we place a colon, and then finally we get to write our function code. This function code will fall on one or more indented lines (note that the indentation is **crucial**). \n",
+    "Functions are defined using a `def` statement, followed by the name that you wish to give the function (this name should follow variable naming conventions - `camel_case` in Python), followed by a set of parentheses that contain any potential parameters that may be passed to the function. Next, we place a colon, and then finally we get to write code for the function body. This code must fall on one or more indented lines (note that the indentation is **crucial**). \n",
     "\n",
     "```python \n",
     "def my_func(passed_arg1, passed_arg2, passed_arg3): \n",
@@ -22,7 +34,7 @@
     "    pass\n",
     "```\n",
     "\n",
-    "Note that we don't have to pass any arguments if we don't want to: \n",
+    "Note that we don't have to pass any parameters if we don't want to: \n",
     "\n",
     "```python \n",
     "def my_func_no_args(): \n",
@@ -106,7 +118,7 @@
    "source": [
     "### Variable Scope\n",
     "\n",
-    "Variable scope is an important concept to consider when building functions. There is a good chance that if you've built a function and are 100% sure that the code is written correctly but you're still getting the wrong result, you are dealing with a scope issue. \n",
+    "Variable scope is an important concept to consider when building functions. Knowing how variable scope works will save you from many kinds of common bugs. \n",
     "\n",
     "**Variable scope** determines the part (or block) of the program in which that variable is visible. We typically refer to one of two scopes of variables - **global** scope and **local** scope. A variable with **global** scope is visible everywhere and can be used by any function, while a variable with **local** scope is visible only in the function in which it was defined. "
    ]
@@ -278,9 +290,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Giving arguments default values\n",
+    "### Giving parameters default values\n",
     "\n",
-    "If you'd like, you can give your function arguments default values. You do this within the function definition statement: \n",
+    "If you'd like, you can give your function parameters default values. You do this within the function definition statement: \n",
     "\n",
     "```python \n",
     "def find_number(numbers_lst, search_number=3):\n",
@@ -291,7 +303,7 @@
     "\n",
     "The way this works is that if the caller of your function passes in a value for search_number, the function uses that. If the caller doesn't pass in a value for search_number, then your function uses the default value that you gave it. \n",
     "\n",
-    "Note that you can also call your functions with either positional arguments (like I have done up until now), or with keyword arguments. The only stipulation is that all positional arguments must be placed before all keyword arguments (i.e. you can't call your function with a keyword argument placed before a positional argument). "
+    "Note that you can also call your functions with either positional parameters (like I have done up until now), or with keyword parameters. The only stipulation is that all positional parameters must be placed before all keyword parameters (i.e. you can't call your function with a keyword parameter placed before a positional parameter). "
    ]
   },
   {
@@ -317,9 +329,9 @@
     "            print 'Found'\n",
     "\n",
     "find_number([1, 2, 3, 4, 5]) # Okay because we specified default value. \n",
-    "find_number([1, 2, 3, 4, 5], 4) # The second passed argument (4) overrides the default 3. \n",
-    "find_number([1, 2, 3, 4, 5], search_number=4) # Okay because all positional arguments specified first. \n",
-    "find_number(numbers_lst=[1, 2, 3, 4, 5], 4) # Not okay, because we specified a keyword argument before a positional."
+    "find_number([1, 2, 3, 4, 5], 4) # The second passed parameter (4) overrides the default 3. \n",
+    "find_number([1, 2, 3, 4, 5], search_number=4) # Okay because all positional parameters specified first. \n",
+    "find_number(numbers_lst=[1, 2, 3, 4, 5], 4) # Not okay, because we specified a keyword parameter before a positional."
    ]
   },
   {
@@ -485,6 +497,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Want some practice?\n",
+    "\n",
+    "Have a look at the `intro_function_practice.ipynb` notebook!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Next Steps\n",
+    "\n",
+    "Next, you can finish this [Python Basic Resources](https://github.com/GalvanizeOpenSource/python-resources/tree/master/basic_resources) series. (You just completed part 1 of 4, so keep it up!)\n",
+    "\n",
+    "If you want to see Python in-action exploring a real dataset, have a look at [Exploring Data with Python using Jupyter Notebooks](https://github.com/GalvanizeOpenSource/python-resources/tree/master/exploring_data)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -510,7 +546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
