--- a/basic_resources/intro_pandas.ipynb
+++ b/basic_resources/intro_pandas.ipynb
@@ -6,7 +6,19 @@
    "source": [
     "# Intro to Pandas \n",
     "\n",
-    "Today in terms of Pandas, we're just going to look at how to get data into a DataFrame and how to look at that data. Pandas DataFrames are a class, and when we interact with these dataframes, we will be interacting with objects, accessing the dataframes fields just like we would any other objects, and manipulating the dataframe data via its methods. \n",
+    "### Quick Note\n",
+    "\n",
+    "This tutorial is part of the [Python Basic Resources](https://github.com/GalvanizeOpenSource/python-resources/tree/master/basic_resources) 4-part series produced by [Galvanize](http://www.galvanize.com/).\n",
+    "\n",
+    "This tutorial moves very fast. If you would like a slower, more in-depth intro to Python, we suggest you take our [Intro to Python Evening Course](http://www.galvanize.com/courses/intro-to-python/). It's the perfect way to become familiar with Python + gain experience using Python to solve challenging problems.\n",
+    "\n",
+    "### Prerequisites\n",
+    "\n",
+    "This document is a *Jupyter notebook*. If you are viewing it using GitHub, then you cannot execute the cells that contain Python code. To view **and run** this notebook you'll need to install Jupyter on your computer before you continue. See [these installation instructions](https://github.com/GalvanizeOpenSource/python-resources/tree/master/installation) for help!\n",
+    "\n",
+    "### Overview\n",
+    "\n",
+    "In this tutorial we will use a very awesome Python library named \"Pandas\". We will look at how to get data into a *Pandas DataFrame* and how to view and manipulate the data.\n",
     "\n",
     "### Pandas Import \n",
     "\n",
@@ -526,7 +538,7 @@
    "source": [
     "# A little bit more of Pandas...\n",
     "\n",
-    "There are LOADS of things you can do with a Pandas DataFrame. For those of you who have worked in R, know that they were inspired by R DataFrames, and so most (if not all) of the stuff you could do in R, you can probably do here. Tonight we're going to focus on some of the more common things that you can do with DataFrames (it would take too long to cover everything). If you want to view all of the available attributes and methods of DataFrames, you can check out the [Pandas Docs](http://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.html). If you want practical examples of how you might use DataFrames, I might suggest getting a copy of [Python for Data Analysis](http://shop.oreilly.com/product/0636920023784.do) (it's written by Wes McKinney, the creator of Pandas). However, you should be aware that a revised copy of that book is being written, so it might be worth holding off (a lot has changed since that first copy was written). \n",
+    "There are TONS of things you can do with a Pandas DataFrame. They were inspired by R DataFrames, and so most (if not all) of the stuff you could do in R, you can probably do here. In this tutorial we will focus on some of the more common things that you can do with DataFrames (it would take too long to cover everything). If you want to view all of the available attributes and methods of DataFrames, you can check out the [Pandas Docs](http://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.html). If you want practical examples of how you might use DataFrames, I might suggest getting a copy of [Python for Data Analysis](http://shop.oreilly.com/product/0636920023784.do) (it's written by Wes McKinney, the creator of Pandas).\n",
     "\n",
     "Alright, let's dive in...\n",
     "\n",
@@ -6493,6 +6505,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Next Steps\n",
+    "\n",
+    "Next, you can finish this [Python Basic Resources](https://github.com/GalvanizeOpenSource/python-resources/tree/master/basic_resources) series. (You just completed part 3 of 4, so keep it up!)\n",
+    "\n",
+    "If you want to see Python in-action exploring a real dataset, have a look at [Exploring Data with Python using Jupyter Notebooks](https://github.com/GalvanizeOpenSource/python-resources/tree/master/exploring_data)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -6518,7 +6543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
